--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -121,7 +121,7 @@ const sections = [
             ))}
         </div>
 
-        
+
         <div class="w-full h-screen pt-8 lg:px-14 flex flex-col items-start justify-around lg:justify-between">
             <div class="lg:w-[60%] akira text-4xl ">
                 <div class="flex gap-2">
@@ -272,7 +272,7 @@ const sections = [
                 <div class="bottomtext">
                     <p>Let's Talk</p>
                     <span class="mt-24 text-center">Ready to take your brand, product, or business to the next level? No hard sell, no big pitch—just a conversation about how we can help you reach your goals.</span>
-                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#f9fc50] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</div>
+                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#FF8C00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</div>
                 </div> 
             </div>
             <div id="custom-cursor-product"></div>
@@ -479,7 +479,7 @@ const sections = [
   }
 
   .submit-button {
-    background-color: #f9fc50;
+    background-color: #FF8C00;
     color: black;
     font-weight: 700;
     border: none;
