--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,22 +18,23 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-x-8 gap-y-4">
         <!-- Column 1 -->
         <div class="space-y-4">
-          <a href="#" class="block hover:text-gray-300">Preference Center</a>
-          <a href="#" class="block hover:text-gray-300">Careers</a>
-          <a href="#" class="block hover:text-gray-300">About Us</a>
-          <a href="#" class="block hover:text-gray-300">Contact Us</a>
-          <a href="#" class="block hover:text-gray-300">Locations</a>
-          <a href="#" class="block hover:text-gray-300">Sitemap</a>
+          <a href="/" class="block hover:text-gray-300">Home</a>
+          <a href="/products" class="block hover:text-gray-300">Products</a>
+          <a href="/company" class="block hover:text-gray-300">About Us</a>
+          <a href="/company#contact" class="block hover:text-gray-300">Contact Us</a>
+          <a href="/company#locations" class="block hover:text-gray-300">Locations</a>
+          <a href="/resources" class="block hover:text-gray-300">Resources</a>
         </div>
         
         <!-- Column 2 -->
         <div class="space-y-4">
-          <a href="#" class="block hover:text-gray-300">Privacy Statement</a>
-          <a href="#" class="block hover:text-gray-300">Terms & Conditions</a>
-          <a href="#" class="block hover:text-gray-300">Cookie Policy/Settings</a>
-          <a href="#" class="block hover:text-gray-300">Accessibility Statement</a>
-          <a href="#" class="block hover:text-gray-300">Modern Slavery Act Statement</a>
-          <a href="#" class="block hover:text-gray-300">Accenture Tax Strategy</a>
+          <a href="/policy" class="block hover:text-gray-300">Privacy Statement</a>
+          <a href="/termsofservice" class="block hover:text-gray-300">Terms Of Service</a>
+          <a href="/security" class="block hover:text-gray-300">Security Policy</a>
+          <a href="/accessibility" class="block hover:text-gray-300">Accessibility Statement</a>
+          <a href="/cookies" class="block hover:text-gray-300">Cookie Policy</a>
+          <a href="/cookiepreferences" class="block hover:text-gray-300">Cookie Preferences</a>
+          <a href="/sitemap" class="block hover:text-gray-300">Sitemap</a>
         </div>
       </div>
       
