--- a/src/components/HeroSixthPage.astro
+++ b/src/components/HeroSixthPage.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="gallery bg-white">
+<div class="gallery bg-[#E7E7D6]">
 	<div class="left">
 		<div class="desktopContent">
 			<div class="desktopContentSection">
