--- a/src/components/ServiceCards.astro
+++ b/src/components/ServiceCards.astro
@@ -236,7 +236,7 @@ const cards = [
   }
 
   .overlay-1 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/aerospaceAndDefence.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -252,7 +252,7 @@ const cards = [
   }
 
   .overlay-2 {
-    background-image: url('/assets/third-card.png');
+    background-image: url('/public/assets/automotive.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -268,7 +268,7 @@ const cards = [
   }
 
   .overlay-3 {
-    background-image: url('/assets/second-card.png');
+    background-image: url('/public/assets/Banking.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -284,7 +284,7 @@ const cards = [
   }
 
   .overlay-4 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/Media.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -316,7 +316,7 @@ const cards = [
   }
 
   .overlay-6 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/Energy.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -332,8 +332,9 @@ const cards = [
   }
 
   .overlay-7 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/Health.jpg');
     display: flex;
+    background-position: right;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -348,7 +349,7 @@ const cards = [
   }
 
   .overlay-8 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/Insurance.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -364,7 +365,7 @@ const cards = [
   }
 
   .overlay-9 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/publicService.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -380,7 +381,7 @@ const cards = [
   }
 
   .overlay-10 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/Retail.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -396,7 +397,7 @@ const cards = [
   }
 
   .overlay-11 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/Travel.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -412,7 +413,7 @@ const cards = [
   }
 
   .overlay-12 {
-    background-image: url('/assets/first-card.png');
+    background-image: url('/public/assets/Utilities.jpg');
     display: flex;
     justify-content:  center;
     align-items: center;
