--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -48,7 +48,7 @@ const sections = [
                     <p class="text-[25px] lg:text-[80px] akira animated-text">your business forward.</p>
                 </div>
             </div>
-            <div class="w-full flex flex-px-2 lg:px-18 pt-14 lg:pt-2">
+            <div class="w-full flex flex px-2 lg:px-18 pt-14 lg:pt-2">
                 <div class="w-full h-full lg:p-12">
                     <p class="text-[20px] font-bold">
                         Who we are
@@ -82,8 +82,8 @@ const sections = [
                     </div>
                 </div>
             </div>
-            <div class="w-full flex px-2 lg:px-18 pt-10">
-                <div>
+            <div class="w-full flex px-2 lg:px-18 pt-10" id="locations">
+                <div class="w-full h-full lg:p-12">
                     <p class="text-[20px] font-bold">
                         World Wide Locations
                     </p>
@@ -92,12 +92,12 @@ const sections = [
                     </p>
                     <div class="w-full flex items-center justify-center py-24">
                         <div class="w-full h-full grid grid-cols-2 md:grid-cols-2 lg:grid-cols-6 gap-4">
-                            <div class="w-full h-full bg-white rounded-tl-3xl rounded-br-3xl py-5 px-4 text-center text-2xl">US</div>
-                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-br-3xl py-5 px-4 text-center text-2xl">UK</div>
-                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-br-3xl py-5 px-4 text-center text-2xl">Europe</div>
-                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-2xl">AsiaPac</div>
-                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-br-3xl py-5 px-4 text-center text-2xl">ANZ</div>
-                            <div class="w-full h-full bg-white rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-2xl">Middleeast</div>
+                            <div class="w-full h-full bg-[#1E1E1D] rounded-tl-3xl rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-xl lg:text-2xl text-white">US</div>
+                            <div class="w-full h-full bg-[#1E1E1D] rounded-tl-3xl rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-xl lg:text-2xl text-white">UK</div>
+                            <div class="w-full h-full bg-[#1E1E1D] rounded-tl-3xl rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-xl lg:text-2xl text-white">Europe</div>
+                            <div class="w-full h-full bg-[#1E1E1D] rounded-tl-3xl rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-xl lg:text-2xl text-white">AsiaPac</div>
+                            <div class="w-full h-full bg-[#1E1E1D] rounded-tl-3xl rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-xl lg:text-2xl text-white">ANZ</div>
+                            <div class="w-full h-full bg-[#1E1E1D] rounded-tl-3xl rounded-bl-3xl rounded-tr-3xl py-5 px-4 text-center text-xl lg:text-2xl text-white">Middleeast</div>
                         </div>
                     </div>
                 </div>
@@ -122,13 +122,13 @@ const sections = [
         </div>
 
 
-        <div class="w-full h-screen pt-8 lg:px-14 flex flex-col items-start justify-around lg:justify-between">
+        <div class="w-full h-screen mt-72 lg:pt-8 lg:px-14 flex flex-col items-start justify-around lg:justify-between">
             <div class="lg:w-[60%] akira text-4xl ">
-                <div class="flex gap-2">
+                <div class="flex lg:flex-row flex-col gap-2 px-2 lg:px-0">
                     <img src={astrix.src} alt="astrix" class="w-[30px] h-[30px] astrix" />
-                    <p class="text-xl lg:text-2xl">And let’s be clear: we hate wasting time or money.</p>
+                    <p class="text-lg lg:text-2xl lg:flex hidden">And let’s be clear: we hate wasting time or money.</p>
                 </div>
-                <p class="text-xl lg:text-2xl">We don’t inflate our budgets just because we think you won’t accept our hourly rate. In fact, we don’t care about hourly rates. Thanks to our experience, we work at lightning speed. We focus on getting things done efficiently, without cutting corners.</p>
+                <p class="text-xl lg:text-2xl lg:px-0 px-2">We don’t inflate our budgets just because we think you won’t accept our hourly rate. In fact, we don’t care about hourly rates. Thanks to our experience, we work at lightning speed. We focus on getting things done efficiently, without cutting corners.</p>
             </div>
 
             <div id="testimonial" class="testimonial-content-sticky flex flex-wrap items-center justify-center lg:mt-20" style="overflow-x: hidden;">
@@ -270,9 +270,9 @@ const sections = [
         <div id="main">
             <div class="page6 "> 
                 <div class="bottomtext">
-                    <p>Let's Talk</p>
-                    <span class="mt-24 text-center">Ready to take your brand, product, or business to the next level? No hard sell, no big pitch—just a conversation about how we can help you reach your goals.</span>
-                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#FF8C00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</div>
+                    <p>We Are Hiring !</p>
+                    <span class="mt-24 text-center text-md lg:text-2xl">We are always on the lookout for passionate, talented individuals to join our dynamic team! If you're eager to make an impact, innovate, and grow in a collaborative environment, we want to hear from you. Explore our current job openings and take the first step toward an exciting career with us. Your next opportunity could be just a click away!</span>
+                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#FF8C00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Contact to Apply</div>
                 </div> 
             </div>
             <div id="custom-cursor-product"></div>
@@ -280,7 +280,7 @@ const sections = [
         </div>
 
         <!-- Contact Form -->
-        <section class="contact-section ">
+        <section class="contact-section" id="contact">
             <div class="container">
               <h2 class="akira">Ready to stand out and grow?</h2>
               <p class="text-gray-500 akira font-semibold">
@@ -392,7 +392,7 @@ const sections = [
 
 @media (max-width: 768px) {
     .bottomtext {
-        font-size: 20px;
+        font-size: 32px;
     }
 }
 
@@ -412,6 +412,12 @@ const sections = [
     line-height: 1.2;
 
 }   
+
+@media (max-width: 768px) {
+    .bottomtext span {
+        font-size: 1rem;
+    }
+}
 
 .bottomtext p:hover {
     font-weight: 900;
@@ -489,6 +495,12 @@ const sections = [
     font-size: 1rem;
     width: 30%;
     transition: all 0.5s ease;
+  }
+
+  @media (max-width: 768px) {
+    .submit-button {
+        width: 100%;
+    }
   }
 
   .submit-button:hover {
