--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -21,7 +21,9 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
     <div class="w-full h-screen flex flex-col justify-evenly px-4 pt-40 lg:px-20 lg:pt-20">
         <div>
             <div class="w-full flex items-center gap-2 lg:gap-4">
-                <img class="w-[20px] h-[20px] lg:w-[60px] lg:h-[60px] astrix"src={astrix} alt="astrix" />
+                <svg class="rotating-asterisk w-[31px] lg:w-[60px] h-auto" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.311 30.7873V21.195L3.95649 25.9911L0.862207 20.6535L9.21676 15.8574L0.862207 11.0612L3.95649 5.64626L12.311 10.4424V0.850127H18.577V10.4424L26.8541 5.64626L30.0258 11.0612L21.6712 15.8574L30.0258 20.6535L26.8541 25.9911L18.577 21.2724V30.7873H12.311Z" fill="black"></path>
+                </svg>
                 <div class="w-full h-full overflow-hidden">
                     <p class="text-[25px] lg:text-[80px] akira animated-text ">Success-Driven Stories</p>
                 </div>
