--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -29,20 +29,20 @@ import Navbar2 from "../../components/Navbar2.astro";
             </div>
         </div>
     </div> -->
-    <div class="w-screen h-[90vh] flex flex-col pt-40 px-20 pb-20">
-        <div class="w-[70%] h-fit text-black py-2 text-[4rem] new leading-[100%]">
+    <div class="w-screen h-[70vh] lg:h-[90vh] flex flex-col pt-40 px-4 lg:px-20 pb-20">
+        <div class="w-[90%] lg:w-[70%] h-fit text-black py-2 text-[4rem] new leading-[100%]">
             <div class="w-full h-fit overflow-hidden ">
-                <p class="animated-text">We are here to </p>
+                <p class="animated-text text-xl lg:text-6xl">We are here to</p>
             </div>
             <div class="w-full h-fit overflow-hidden ">
-                <p class="animated-text">Solve real problems </p>
+                <p class="animated-text text-xl lg:text-6xl">Solve real problems </p>
             </div>
             <div class="w-full h-fit overflow-hidden ">
-                <p class="animated-text">drive your business forward</p>
+                <p class="animated-text text-xl lg:text-6xl">drive your business forward</p>
             </div>
         </div>
-        <div class="w-[30%] flex flex-col items-start justify-end"> 
-            <div class="w-48 h-4 bg-[#FF5800] mt-14 mb-6 dash"></div>
+        <div class="w-full lg:w-[30%] flex flex-col items-start justify-end"> 
+            <div class="w-32 lg:w-48 h-2 lg:h-4 bg-[#FF5800] mt-6 lg:mt-14 mb-6 dash"></div>
             <div class="w-full h-full font-semibold leading-none subtext">
               The supply chains we need, the special effects that wow, the stadiums we fill, the food we eat, the
               clothes we wear, the cars we drive, the homes where we live, the holidays we take, the trees we
@@ -53,8 +53,8 @@ import Navbar2 from "../../components/Navbar2.astro";
     <div class="w-screen h-full bg-[#FBF8F4] relative">
         <ServiceCards />
     </div>
-    <div class="w-full h-fit flex flex-col items-start justify-start gap-10 px-20 pt-20">
-        <div class="w-[70%]  font-new text-[4rem] leading-[100%] font-bold">
+    <div class="w-full h-fit flex flex-col items-start justify-start gap-10 px-4 lg:px-20 pt-20">
+        <div class="w-full lg:w-[70%]  font-new text-xl lg:text-[4rem] leading-[100%] font-bold">
             <p>We blend unmatched expertise, tailored solutions, and proven results to make your app/SaaS thrive.</p>
         </div>
     </div>
