--- a/src/pages/resources/[id].astro
+++ b/src/pages/resources/[id].astro
@@ -4,6 +4,7 @@ import Navbar from "../../components/Navbar.astro";
 import articles from "../../data/articleData.js";
 import CTAPage from "../../components/CTAPage.astro";
 import astrix from "/public/assets/asterisk.png";
+import Navbar2 from "../../components/Navbar2.astro";
 
 // Export getStaticPaths to generate paths for all articles
 export async function getStaticPaths() {
@@ -22,14 +23,14 @@ if (!article) {
 
 <Layout title={article.title}>
     <div class="w-screen min-h-screen bg-[#FBF8F4]">
-        <Navbar/>
-        <div class="w-full mx-auto pt-40 px-8 pb-8">
-            <img src={article.illustrationSrc} alt="Article illustration" class="w-full h-auto rounded-[100px] object-cover">
+        <Navbar2/>
+        <div class="w-full mx-auto pt-40 px-4 lg:px-8 pb-8">
+            <img src={article.illustrationSrc} alt="Article illustration" class="w-full h-auto rounded-md lg:rounded-[100px] object-cover">
             <div class= p-12">
                 
-                <div class="mt-12 text-center px-64">
+                <div class="mt-12 text-center lg:px-64">
                     <!-- <p class="text-sm font-medium text-gray-600 mb-2">*{article.readTime} read</p> -->
-                    <h1 class="text-6xl font-bold mb-4">{article.title}</h1>
+                    <h1 class="text-2xl lg:text-6xl font-bold mb-4">{article.title}</h1>
                     <div class="flex flex-col items-center justify-center mb-8 mt-8">
                         <img src="/assets/user.jpg" alt="author" class="w-12 h-12 rounded-full ">
                         <div class="flex flex-col items-center justify-center text-center" >
@@ -50,7 +51,7 @@ if (!article) {
                 <div class="bottomtext flex flex-col items-center justify-center">
                     <img src={astrix.src} alt="astrix" class="astrix w-[50px] mb-8 "/>
                     <p>Ready to stand out and grow ?</p>
-                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#f9fc50] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</div>
+                    <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#FF8C00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Start Your Success</div>
             </div>
             <div id="custom-cursor-product"></div>
         </div>
@@ -130,7 +131,12 @@ color: black;
     font-weight: 400;
     font-size: 70px;
     font-stretch: 700%;
+}
 
+@media (max-width: 768px) {
+    .bottomtext {
+        font-size: 2rem;
+    }
 }
 
 .bottomtext p {
