--- a/src/components/Navbar2.astro
+++ b/src/components/Navbar2.astro
@@ -2,7 +2,7 @@
     <div class="container mx-auto flex justify-between items-center p-4">
         <div class="text-xl font-bold text-white mix-blend-difference">
             <a href="/">
-                <img src="/public/assets/LogoBlack.png" alt="logo" class="w-[50px] md:w-[80px] h-auto">
+                <img src="/assets/LogoBlack.png" alt="logo" class="w-[50px] md:w-[80px] h-auto">
             </a>
         </div>
         <div class="hidden md:flex items-center justify-between"> <!-- Show on medium screens and up -->
