--- a/src/components/StackingCardsHero.astro
+++ b/src/components/StackingCardsHero.astro
@@ -10,25 +10,25 @@ import * as Icon from '@astropub/icons'
 
   <section class="card pinned">
     <div class="img">
-      <img src="/public/assets/Mockup-1.jpg" alt="" />
+      <img src="/assets/Mockup-1.jpg" alt="" />
     </div>
   </section>
 
   <section class="card pinned">
     <div class="img">
-      <img src="/public/assets/Mockup-4.jpg" alt="" />
+      <img src="/assets/Mockup-4.jpg" alt="" />
     </div>
   </section>
 
   <section class="card pinned">
     <div class="img">
-      <img src="/public/assets/Mockup-5.jpg" alt="" />
+      <img src="/assets/Mockup-5.jpg" alt="" />
     </div>
   </section>
 
   <section class="card scroll">
     <div class="img">
-      <img src="/public/assets/Mockup-9.jpg" alt="" />
+      <img src="/assets/Mockup-9.jpg" alt="" />
     </div>
   </section>
 
