--- a/src/pages/resources/[id].astro
+++ b/src/pages/resources/[id].astro
@@ -22,7 +22,7 @@ if (!article) {
 ---
 
 <Layout title={article.title}>
-    <div class="w-screen min-h-screen bg-[#FBF8F4]">
+    <div class="w-screen min-h-screen bg-[#E7E7D6]">
         <Navbar2/>
         <div class="w-full mx-auto pt-40 px-4 lg:px-8 pb-8">
             <img src={article.illustrationSrc} alt="Article illustration" class="w-full h-auto rounded-md lg:rounded-[100px] object-cover">
