--- a/src/components/CTAPage.astro
+++ b/src/components/CTAPage.astro
@@ -14,7 +14,7 @@
             <p>Ready </p>
             <p>For your Success</p>
             <p>Journey ?</p>
-            <div class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#FF5800] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300 ">Contact us</div>
+            <a href="/company#contact" class="mt-24 contact-button text-sm text-center py-4 px-5 bg-[#ff6d00] rounded-full w-fit hover:bg-black hover:text-white transition-all duration-300 ">Contact us</a>
         </div>
         <div class="footertext">
             <p>this is your team of brand experts,</p>
