--- a/src/components/HeroLastPage.astro
+++ b/src/components/HeroLastPage.astro
@@ -12,19 +12,19 @@
         
         <div class="horizontal-animation flex items-center justify-center w-full z-40" id="horizontalAnimation">
             <div class="horizontal-animation-item padding-top ">
-                <h3 class="font-akira">01</h3>
+                <h3 class="font-akira text-[#FF8C00]">01</h3>
                 <p>Submit your resume</p>
             </div>
             <div class="horizontal-animation-item padding-bottom">
-                <h3 class="font-akira">02 </h3>
+                <h3 class="font-akira text-[#FF8C00]">02 </h3>
                 <p>Comprehensive Review</p>
             </div>
             <div class="horizontal-animation-item padding-top">
-                <h3 class="font-akira">03 </h3>
+                <h3 class="font-akira text-[#FF8C00]">03 </h3>
                 <p>Detailed Feedback</p>
             </div>
             <div class="horizontal-animation-item padding-bottom">
-                <h3 class="font-akira">04 </h3>
+                <h3 class="font-akira text-[#FF8C00]">04 </h3>
                 <p>No Obligation</p>
             </div>
         </div>
@@ -89,17 +89,20 @@
         font-family: 'MediaanItalic';
         width: 300px; /* Adjust width */
         height: 400px; /* Adjust height */
-        background: #101010; /* Make background transparent */
+        background: #1E1E1D; /* Make background transparent */
         border: 0.5px solid #868686; /* Add border */
         color: white; /* Text color */
         display: flex;
         align-items: start;
-        padding:8px;
+        padding:16px;
         justify-content: space-between;
         flex-direction: column;
         position: relative; /* For positioning */
         overflow: hidden; /* Hide overflow */
         text-align: center; /* Center text */
+        border-top-right-radius: 40px;
+        border-bottom-left-radius: 40px;
+        border-top-left-radius: 40px;
     }
   
     .horizontal-animation-item.padding-top {
