--- a/src/components/BrandFeatures.astro
+++ b/src/components/BrandFeatures.astro
@@ -58,8 +58,8 @@ const brandingFeatures = [
 ];
 ---
 
-<section class="bg-[#E7E7D6] w-full flex items-center justify-start ps-2 lg:ps-0 lg:px-20 md:py-10">
-    <div class="flex flex-col items-start justify-center">
+<section class="bg-[#E7E7D6] w-full flex items-center justify-start ps-2 lg:ps-0 lg:px-20 md:py-10 lg:pt-20">
+    <div class="flex flex-col items-start justify-center lg:ps-20">
         <div class="flex flex-col md:flex-row items-start md:items-center justify-start gap-2 md:gap-4 h-full">
             <svg class="rotating-asterisk" height="31" viewBox="0 0 31 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12.311 30.7873V21.195L3.95649 25.9911L0.862207 20.6535L9.21676 15.8574L0.862207 11.0612L3.95649 5.64626L12.311 10.4424V0.850127H18.577V10.4424L26.8541 5.64626L30.0258 11.0612L21.6712 15.8574L30.0258 20.6535L26.8541 25.9911L18.577 21.2724V30.7873H12.311Z" fill="black"></path>
