--- a/src/components/Navbar2.astro
+++ b/src/components/Navbar2.astro
@@ -12,7 +12,9 @@
                 <li class="nav-links"><a href="/services" class="text-white hover:text-[#ff5800] transition-all duration-300">Services</a></li>
                 <li class="nav-links"><a href="/resources" class="text-white hover:text-[#ff5800] transition-all duration-300">Resources</a></li>
             </ul>
-            <button class="text-white text-[0.9rem] px-6 py-4 rounded-full bg-[#ff5800] font-semibold ml-4">Get in touch</button> <!-- Get in touch button -->
+            <a href="/company#contact">
+                <button class="text-white text-[0.9rem] px-6 py-4 rounded-full bg-[#ff5800] font-semibold ml-4">Get in touch</button> <!-- Get in touch button -->
+            </a>
         </div>
         <button class="text-black text-[0.9rem] px-6 py-4 rounded-full bg-[#ff5800] font-semibold md:hidden" id="hamburger">☰</button> <!-- Hamburger button -->
     </div>
