--- a/src/components/ProductSections.astro
+++ b/src/components/ProductSections.astro
@@ -19,7 +19,7 @@ import thirdImage from "../../public/assets/third-card.png"
                     </p>
                 </div>
                 <div class="flex flex-col mt-16">
-                    <p class="text-white text-[1.2rem] font-bold">
+                    <p class="text-[#FF6D00] text-[1.2rem] font-bold mb-2">
                         First Impressions matter
                     </p>
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
@@ -54,7 +54,7 @@ import thirdImage from "../../public/assets/third-card.png"
                     </p>
                 </div>
                 <div class="flex flex-col mt-16">
-                    <p class="text-white text-[1.2rem] font-bold">
+                    <p class="text-[#FF6D00] text-[1.2rem] font-bold">
                         First Impressions matter
                     </p>
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
@@ -89,7 +89,7 @@ import thirdImage from "../../public/assets/third-card.png"
                     </p>
                 </div>
                 <div class="flex flex-col mt-16">
-                    <p class="text-white text-[1.2rem] font-bold">
+                    <p class="text-[#FF6D00] text-[1.2rem] font-bold">
                         First Impressions matter
                     </p>
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
@@ -120,7 +120,7 @@ import thirdImage from "../../public/assets/third-card.png"
                     </p>
                 </div>
                 <div class="flex flex-col mt-16">
-                    <p class="text-white text-[1.2rem] font-bold">
+                    <p class="text-[#FF6D00] text-[1.2rem] font-bold">
                         First Impressions matter
                     </p>
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
