--- a/src/components/ServiceCards.astro
+++ b/src/components/ServiceCards.astro
@@ -236,7 +236,7 @@ const cards = [
   }
 
   .overlay-1 {
-    background-image: url('/public/assets/aerospaceAndDefence.jpg');
+    background-image: url('/assets/aerospaceAndDefence.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -252,7 +252,7 @@ const cards = [
   }
 
   .overlay-2 {
-    background-image: url('/public/assets/automotive.jpg');
+    background-image: url('/assets/automotive.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -268,7 +268,7 @@ const cards = [
   }
 
   .overlay-3 {
-    background-image: url('/public/assets/Banking.jpg');
+    background-image: url('/assets/Banking.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -284,7 +284,7 @@ const cards = [
   }
 
   .overlay-4 {
-    background-image: url('/public/assets/Media.jpg');
+    background-image: url('/assets/Media.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -316,7 +316,7 @@ const cards = [
   }
 
   .overlay-6 {
-    background-image: url('/public/assets/Energy.jpg');
+    background-image: url('/assets/Energy.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -332,7 +332,7 @@ const cards = [
   }
 
   .overlay-7 {
-    background-image: url('/public/assets/Health.jpg');
+    background-image: url('/assets/Health.jpg');
     display: flex;
     background-position: right;
     justify-content: center;
@@ -349,7 +349,7 @@ const cards = [
   }
 
   .overlay-8 {
-    background-image: url('/public/assets/Insurance.jpg');
+    background-image: url('/assets/Insurance.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -365,7 +365,7 @@ const cards = [
   }
 
   .overlay-9 {
-    background-image: url('/public/assets/publicService.jpg');
+    background-image: url('/assets/publicService.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -381,7 +381,7 @@ const cards = [
   }
 
   .overlay-10 {
-    background-image: url('/public/assets/Retail.jpg');
+    background-image: url('/assets/Retail.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -397,7 +397,7 @@ const cards = [
   }
 
   .overlay-11 {
-    background-image: url('/public/assets/Travel.jpg');
+    background-image: url('/assets/Travel.jpg');
     display: flex;
     justify-content: center;
     align-items: center;
@@ -413,7 +413,7 @@ const cards = [
   }
 
   .overlay-12 {
-    background-image: url('/public/assets/Utilities.jpg');
+    background-image: url('/assets/Utilities.jpg');
     display: flex;
     justify-content:  center;
     align-items: center;
