--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -271,7 +271,7 @@ const sections = [
             <div class="page6 "> 
                 <div class="bottomtext">
                     <p>We Are Hiring !</p>
-                    <span class="mt-24 text-center text-md lg:text-2xl">We are always on the lookout for passionate, talented individuals to join our dynamic team! If you're eager to make an impact, innovate, and grow in a collaborative environment, we want to hear from you. Explore our current job openings and take the first step toward an exciting career with us. Your next opportunity could be just a click away!</span>
+                    <span class="mt-24 text-center text-md">We are always on the lookout for passionate, talented individuals to join our dynamic team! If you're eager to make an impact, innovate, and grow in a collaborative environment, we want to hear from you. Explore our current job openings and take the first step toward an exciting career with us. Your next opportunity could be just a click away!</span>
                     <div class="mt-24 contact-button text-sm text-center py-5 px-8 bg-[#FF8C00] rounded-full w-fit font-medium hover:bg-black hover:text-white transition-all duration-300 ">Contact to Apply</div>
                 </div> 
             </div>
@@ -392,9 +392,10 @@ const sections = [
 
 @media (max-width: 768px) {
     .bottomtext {
-        font-size: 32px;
+        font-size: 16px;
     }
 }
+
 
 .bottomtext p {
     line-height: 0.8;
@@ -402,10 +403,11 @@ const sections = [
     transition: all 0.5s ease;
 }
 
+
 .bottomtext span {
     font-family: 'new', sans-serif;
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-stretch: 700%;
     width: 70%;
     text-wrap: balance;
